--- a/aboutus.html
+++ b/aboutus.html
@@ -47,12 +47,17 @@
             </div>
         </nav>
     </header>
-    </hr>
-    <p>
-        <div class="team text-center">
-            <h3>TEAM</h3>
-        </div>
-    </p>
+
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb fil">
+            <li class="breadcrumb-item"><a href="#" class="fil">Accueil</a></li>
+            <li class="breadcrumb-item active" aria-current="page"> À propos </li>
+        </ol>
+    </nav>
+    
+    <div class="text-center mb-5 mt-5">
+        <h1> TEAM </h1>
+    </div>
     <div class="card-deck us">
         <div class="card">
             <img src="./images/marlene.jpg" class="card-img-top" alt="marlene">
@@ -115,10 +120,11 @@
                 </nav>
                 <nav class="nav flex-column offset-2">
                     <a class="nav-link" href="#"><i class="fab fa-facebook-square"></i>Facebook</a>
-                    <a class="nav-link" href="#"><i class="fab fa-github"></i>Github</a>
+                    <a class="nav-link" href="https://github.com/webassembly"><i class="fab fa-github"></i>Github</a>
                 </nav>
             </div>
         </div>
+        <p class="d-flex justify-content-end pr-2"> &copy; Team GSMC WCS</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
