--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="./actus.html">Actus <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="./contac-us.html">Team<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="./contact-us.html">Team<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -89,7 +89,7 @@
                         amélioreront la prise en charge de WebAssembly dans leurs moteurs. Les éditeurs de navigateurs 
                         travaillent sur ces problèmes de manière indépendante.</p>
                     <div class="d-flex justify-content-center">
-                        <button class="btn btn-primary" type="submit"> Lire plus </button>
+                        <button class="btn btn-primary lienarticle" type="submit"><a href="./article.html"> Lire plus </a></button>
                     </div>
                 </div>
             </div>
@@ -98,7 +98,7 @@
                     <p>WebAssembly est un nouveau type de code pouvant être exécuté dans les navigateurs modernes.
                     </p>
                     <div class="d-flex justify-content-center">
-                        <button class="btn btn-primary" type="submit"> Découvrir WebAssembly </button>
+                        <button class="btn btn-primary lienarticle" type="submit"> <a href="./webassembly.html">Découvrir WebAssembly </a></button>
                     </div>
                 </blockquote>
             </div>
@@ -124,13 +124,7 @@
                     </footer> -->
                 </blockquote>
             </div>
-            <!-- <div class="card text-center">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has a regular title and short paragraphy of text below it.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-            </div> -->
+
             <div class="card">
                 <img src="./images/wasmvsjs.jpeg" class="card-img-top" alt="image">
             </div>
@@ -195,38 +189,6 @@
             </div>
         </div>
     </div>
-
-    <!-- <div class="card-deck">
-        <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
-            <div class="card-footer">
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
-        </div>
-        <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            </div>
-            <div class="card-footer">
-                <p class="card-text"><small class="text-muted">Last updated 3 days</small></p>
-            </div>
-        </div>
-        <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
-        </div>
-    </div> -->
         <footer class="bg-light">
             <div class="container-fluid">
                 <div class="row ">
@@ -240,10 +202,11 @@
                     </nav>
                     <nav class="nav flex-column offset-2">
                     <a class="nav-link" href="#"><i class="fab fa-facebook-square"></i>Facebook</a>
-                    <a class="nav-link" href="https://github.com/webassembly"><i class="fab fa-github"></i>Github</a>
+                    <a class="nav-link mr-5" href="https://github.com/webassembly" target="_blank"><i class="fab fa-github"></i>Github</a>
                     </nav>
                 </div>
             </div>
+            <p class="d-flex justify-content-end pr-2"> &copy; Team GSMC WCS</p>
         </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
